--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,9 +5,9 @@
   "editor.minimap.enabled": false,
   "editor.formatOnSave": true,
   "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true,
-    "source.fixAll.tslint": true,
-    "source.organizeImports": true
+    "source.fixAll.eslint": "explicit",
+    "source.fixAll.tslint": "explicit",
+    "source.organizeImports": "explicit"
   },
   "editor.tokenColorCustomizations": {
     "textMateRules": [
@@ -24,7 +24,7 @@
   "[blade]": {
     "editor.autoClosingBrackets": "always"
   },
-  "editor.cursorSmoothCaretAnimation": true,
+  "editor.cursorSmoothCaretAnimation": "on",
   "editor.cursorBlinking": "expand",
   "editor.defaultFormatter": "esbenp.prettier-vscode",
 
